--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,30 @@
 {
-    "name": "gonzalo123/pxinetd",
-    "description": "PHP eXtended InterNET Daemon",
-    "authors": [
-        {
-            "name": "Gonzalo Ayuso",
-            "email": "gonzalo123@gmail.com"
-        }
-    ],
-    "require": {
-        "cboden/ratchet": "dev-master",
-        "symfony/yaml": "2.4.*@dev",
-        "symfony/config": "2.3.*@dev",
-        "symfony/event-dispatcher": "2.5.*@dev"
-    },
-    "require-dev": {
-        "silex/silex": "1.2.*@dev"
-    },
-    "autoload": {
-        "psr-0": {
-            "": "src/"
-        }
+  "name": "gonzalo123/pxinetd",
+  "description": "PHP eXtended InterNET Daemon",
+  "authors": [
+    {
+      "name": "Gonzalo Ayuso",
+      "email": "gonzalo123@gmail.com"
     }
+  ],
+  "require": {
+    "cboden/ratchet": "dev-master",
+    "symfony/yaml": "3.0.*@dev",
+    "symfony/config": "3.0.*@dev",
+    "symfony/event-dispatcher": "3.0.*@dev"
+  },
+  "require-dev": {
+    "silex/silex": "2.0.*@dev",
+    "react/socket-client": "0.4.*@dev"
+  },
+  "autoload": {
+    "psr-4": {
+      "G\\Pxi\\": "src/"
+    }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0-dev"
+    }
+  }
 }
